# FruitVision

./: CMakeLists.txt  README.md  installer.bat  license.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform2.yml  windows.yml
script/: requirments.txt
src/App/: App.cpp  App.h
src/Components/: Button.h
src/Components/SButton/: SButton.cpp  SButton.h
src/Components/SImage/: SImage.cpp  SImage.h
src/Components/TextField/: TextField.cpp  TextField.h
src/FileDialog/: FileDialogFactory.h  FileDialogWindows.cpp  FileDialogWindows.h
src/ImageRecognizer/: ImageRecognizerTest.cpp  ImageRecognizerTest.h  ImageRecognizer_1.cpp  ImageRecognizer_1.h
src/Interfaces/: Commands.h  Component.h  FileDialog.h  ImageRecognizer.h  Layer.h  Observable.h  Observator.h  Updateable.h
src/Layers/: GetResult.cpp  GetResult.h  LoadImage.cpp  LoadImage.h  LoadModel.cpp  LoadModel.h  MenuLayer.cpp  MenuLayer.h
src/Reader/: SettingsReader.cpp  SettingsReader.h
src/Resources/: categories.txt  fruitRecognizer3.py  imageRecognizer1.py  settings.txt
tests/: test.cpp
